testing tmux themes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,6 @@
 set -g default-terminal "xterm-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+set-option -sa terminal-overrides ",xterm*:Tc"
 #set -ga terminal-overrides ',*:Tc' # this is for 256 color
 #set -g default-terminal "screen-256color"
 #set-option -sa terminal-overrides ",xterm*:Tc"
@@ -20,6 +22,10 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
+# general settings
+set -g status-position top
+set -g status-justify left
+
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
@@ -34,15 +40,22 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 
-set -g @catppuccin_flavour 'mocha'
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins'
 
 set -g @plugin 'tmux-plugins/tpm'
 #set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-yank'
+#set -g @plugin 'dracula/tmux'
+#set -g @plugin 'o0th/tmux-nova'
+#set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'seebi/tmux-colors-solarized'
+set -g @colors-solarized '256'
+#set -g @plugin 'tmux-plugins/tmux-sensible'
+#set -g @plugin 'christoomey/vim-tmux-navigator'
+#set -g @plugin 'tmux-plugins/tmux-yank'
 
-run '~/.tmux/plugins/tpm/tpm'
+set -g @catppuccin_flavour 'mocha'
+
+run -b '~/.tmux/plugins/tpm/tpm'
 
 # set vi-mode
 set-window-option -g mode-keys vi
