--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -43,17 +43,12 @@ bind -n M-L next-window
 set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins'
 
 set -g @plugin 'tmux-plugins/tpm'
-#set -g @plugin 'catppuccin/tmux'
-#set -g @plugin 'dracula/tmux'
-#set -g @plugin 'o0th/tmux-nova'
-#set -g @plugin 'jimeh/tmux-themepack'
-set -g @plugin 'seebi/tmux-colors-solarized'
-set -g @colors-solarized '256'
-#set -g @plugin 'tmux-plugins/tmux-sensible'
-#set -g @plugin 'christoomey/vim-tmux-navigator'
-#set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
-set -g @catppuccin_flavour 'mocha'
+#set -g @catppuccin_flavour 'mocha'
 
 run -b '~/.tmux/plugins/tpm/tpm'
 
@@ -67,3 +62,10 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind _ split-window -v -c "#{pane_current_path}"
 bind | split-window -h -c "#{pane_current_path}"
 
+#set inactive/active window styles
+set -g window-style 'fg=#4c4f69,bg=#dce0e8'
+set -g window-active-style 'fg=#cdd6f4,bg=#1e1e2e'
+
+# set the pane border colors 
+set -g pane-border-style 'fg=#ff0000,bg=#ff0000' 
+set -g pane-active-border-style 'fg=#ff0000,bg=#ff0000'
