--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -63,7 +63,7 @@ bind _ split-window -v -c "#{pane_current_path}"
 bind | split-window -h -c "#{pane_current_path}"
 
 #set inactive/active window styles
-set -g window-style 'fg=#4c4f69,bg=#dce0e8'
+set -g window-style 'fg=#dce0e8,bg=#4c4f69'
 set -g window-active-style 'fg=#cdd6f4,bg=#1e1e2e'
 
 # set the pane border colors 
